--- a/BTVN02/Views/Tuan02/Index.cshtml
+++ b/BTVN02/Views/Tuan02/Index.cshtml
@@ -10,8 +10,10 @@
 </header>
 
 <section>
+    
     <nav>
         <ul>
+            <li><a href="~/profile">Profile</a></li>
             <li>@ViewBag.HoTen</li>
             <li>@ViewBag.MSSV</li>
             <li>@ViewBag.Nam</li>
@@ -23,7 +25,9 @@
         
         
         <p>-----------------------</p>
-        <img src="~/image/Min.jpg" style="width:120px;" />
+        <a href="~/profile">
+            <img src="~/image/Min.jpg" style="width:120px;" />
+        </a>
         <p>Minnz Đầu Gấu Không Ngán Một Ai!!!!!</p>
     </article>
 </section>
