--- a/Project_A/Project_A/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Project_A/Project_A/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,13 +5,25 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-
+<!--xong các bước chuyển về Register.cshtml.cs để chỉnh tiếp OnPostAsync-->
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12"><!--chỉnh từ 3 thành 12 cho ô đăng lý rộng hơn-->
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
+            <h2>Đăng Kí Tài Khoản Mới</h2>
             <hr />
+            <!--thêm name-->
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Name" class="form-control"  aria-required="true"  />
+                <label asp-for="Input.Name">Name</label>
+                <span asp-validation-for="Input.Name" class="text-danger"></span>
+            </div><!--kết-->
+
+            <div class="form-floating mb-3"><!--thêm address-->
+                <input asp-for="Input.Address" class="form-control" aria-required="true" />
+                <label asp-for="Input.Address">Address</label>
+                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email">Email</label>
@@ -27,9 +39,24 @@
                 <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+
+            <!--thêm-->
+            <div class="form-floating mb-3">
+                <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
+                    <option disabled selected >Chọn role</option>
+                </select>
+            </div>
+            <!--thêm role-->
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Role" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <label asp-for="Input.Role">Role</label>
+                <span asp-validation-for="Input.Role" class="text-danger"></span>
+            </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
+    <!--xoá chữ-->
+    <!--
     <div class="col-md-6 col-md-offset-2">
         <section>
             <h3>Use another service to register.</h3>
@@ -59,7 +86,7 @@
                 }
             }
         </section>
-    </div>
+    </div>-->
 </div>
 
 @section Scripts {
