--- a/Project_A/Project_A/Areas/Admin/Views/SanPham/Index.cshtml
+++ b/Project_A/Project_A/Areas/Admin/Views/SanPham/Index.cshtml
@@ -22,7 +22,7 @@
                     <td>@item.TheLoai.Name</td>
                     <td>
                         <a asp-action="Upsert" asp-route-id="@item.Id">Edit</a> |
-                        <a asp-action="Details">Details</a> |
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                         <a class="text-danger" onclick="confirmDelete(@item.Id, $(this))">Delete</a> |
                     </td>
                 </tr>
