--- a/Project_A/Project_A/Views/Shared/_Layout.cshtml
+++ b/Project_A/Project_A/Views/Shared/_Layout.cshtml
@@ -52,9 +52,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index"><strong>Trang Chủ</strong></a>
                         </li>
                         
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="TheLoai"><strong>Thể Loại</strong></a>
-                        </li>
+                        @await Component.InvokeAsync("TheLoai")
+                        
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="SanPham"><strong>Sản Phẩm</strong></a>
                         </li>
