--- a/Project_A/Project_A/Views/_ViewImports.cshtml
+++ b/Project_A/Project_A/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Project_A
 @using Project_A.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Project_A.Areas.Identity
+@using Project_A.Areas.Identity.Pages
+@addTagHelper *,Project_A
